aspen/aspen/parser/AspenParser.output
State 361 conflicts: 1 shift/reduce


Grammar

    0 $accept: begin $end

    1 begin: mach
    2      | app
    3      | map

    4 mach: machcontent

    5 machcontent: globalstmt
    6            | component
    7            | machcontent globalstmt
    8            | machcontent component

    9 component: TIDENT TIDENT TLBRACE componentstatements TRBRACE

   10 componentstatements: componentstmt
   11                    | componentstatements componentstmt

   12 componentstmt: property
   13              | connect
   14              | resource
   15              | power
   16              | conflict
   17              | subcomponent

   18 subcomponent: TIDENT TIDENT
   19             | TIDENT quantity TIDENT

   20 property: TKW_PROPERTY TIDENT quantity
   21         | TKW_PROPERTY TIDENT

   22 connect: TKW_CONNECT TLBRACE identlist TRBRACE

   23 conflict: TKW_CONFLICT TIDENT TCOMMA TIDENT

   24 resource: TKW_RESOURCE TIDENT TLPAREN TIDENT TRPAREN quantity TKW_WITH traitdefinitions
   25         | TKW_RESOURCE TIDENT TLPAREN TIDENT TRPAREN quantity

   26 traitdefinitions: TIDENT quantity
   27                 | TIDENT TLPAREN TIDENT TRPAREN quantity
   28                 | traitdefinitions TCOMMA TIDENT quantity
   29                 | traitdefinitions TCOMMA TIDENT TLPAREN TIDENT TRPAREN quantity

   30 power: TKW_STATIC TKW_POWER quantity
   31      | TKW_DYNAMIC TKW_POWER quantity

   32 map: TKW_MODEL TIDENT TLBRACE globalstatements mapdata mapkernel TRBRACE
   33    | TKW_MODEL TIDENT TLBRACE globalstatements mapdata TRBRACE
   34    | TKW_MODEL TIDENT TLBRACE globalstatements mapkernel TRBRACE

   35 mapkernel: TKW_KERNEL TLBRACE mapstmts TRBRACE

   36 mapdata: TKW_DATA TLBRACE mapstmts TRBRACE

   37 mapstmts: mapstmt
   38         | mapstmts mapstmt

   39 mapstmt: TKW_MAP ident TKW_TO ident

   40 app: TKW_MODEL TIDENT TLBRACE globalstatements kernels TRBRACE

   41 kernels: kernel
   42        | kernels kernel

   43 kernel: TKW_KERNEL ident TLBRACE kernelstatements TRBRACE
   44       | TKW_KERNEL ident TLBRACE localstatements kernelstatements TRBRACE
   45       | TKW_KERNEL ident TLPAREN argdecllist TRPAREN TLBRACE kernelstatements TRBRACE
   46       | TKW_KERNEL ident TLPAREN argdecllist TRPAREN TLBRACE localstatements kernelstatements TRBRACE

   47 ident: TIDENT
   48      | TIDENT TDOT ident

   49 value: TINT
   50      | TREAL

   51 optionalident: /* empty */
   52              | ident

   53 constant: TKW_10POWER

   54 globalstatements: globalstmt
   55                 | globalstatements globalstmt

   56 localstatements: localstmt
   57                | localstatements localstmt

   58 kernelstatements: kernelstmt
   59                 | kernelstatements kernelstmt

   60 execstatements: execstmt
   61               | execstatements execstmt

   62 globalstmt: importstmt
   63           | paramstmt
   64           | datastmt

   65 localstmt: importstmt
   66          | paramstmt
   67          | datastmt

   68 kernelstmt: TKW_EXECUTE optionalstring TLBRACE execstatements TRBRACE
   69           | TKW_EXECUTE quantity optionalstring TLBRACE execstatements TRBRACE
   70           | controlstmt

   71 execstmt: TIDENT quantity tofrom optionaltraitlist
   72         | TIDENT quantity TKW_OF TKW_SIZE quantity tofrom optionaltraitlist

   73 paramstmt: TKW_PARAM ident TEQUAL expr
   74          | TKW_PARAM ident TEQUAL expr TKW_IN expr TDOTDOT expr
   75          | TKW_PARAM ident TEQUAL expr TKW_IN TIDENT
   76          | TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TLBRACE valuelist TRBRACE
   77          | TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   78          | TKW_PARAM ident TLBRACKET TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE
   79          | TKW_ENUM TIDENT TLBRACE identlist TRBRACE

   80 arraylist: TLBRACE valuelist TRBRACE
   81          | arraylist TCOMMA TLBRACE valuelist TRBRACE

   82 valuelist: TINT
   83          | TREAL
   84          | valuelist TCOMMA TINT
   85          | valuelist TCOMMA TREAL

   86 identlist: TIDENT
   87          | identlist TCOMMA TIDENT

   88 samplestmt: TKW_SAMPLE ident TKW_FROM functioncall

   89 datastmt: TKW_DATA TIDENT TKW_AS functioncall
   90         | TKW_DATA TIDENT quantity

   91 importstmt: TKW_IMPORT TIDENT TKW_FROM TSTRING
   92           | TKW_IMPORT TIDENT TKW_FROM TSTRING TKW_WITH namedarguments

   93 kernelcall: TKW_CALL ident
   94           | TKW_CALL ident TLPAREN arguments TRPAREN

   95 comparison: comparison TAND comparison
   96           | comparison TOR comparison
   97           | expr TCOMPEQ expr
   98           | expr TCOMPNE expr
   99           | expr TCOMPLT expr
  100           | expr TCOMPGT expr
  101           | expr TCOMPLE expr
  102           | expr TCOMPGE expr

  103 ifthencontrol: TKW_IF TLPAREN comparison TRPAREN TLBRACE kernelstatements TRBRACE
  104              | TKW_IF TLPAREN comparison TRPAREN TLBRACE kernelstatements TRBRACE TKW_ELSE TLBRACE kernelstatements TRBRACE
  105              | TKW_IF TLPAREN comparison TRPAREN TLBRACE kernelstatements TRBRACE TKW_ELSE ifthencontrol

  106 caseitems: quantity TLBRACE kernelstatements TRBRACE
  107          | caseitems quantity TLBRACE kernelstatements TRBRACE

  108 probabilitycontrol: TKW_PROBABILITY TLBRACE caseitems TRBRACE
  109                   | TKW_PROBABILITY TLBRACE caseitems TKW_ELSE TLBRACE kernelstatements TRBRACE TRBRACE

  110 switchcontrol: TKW_SWITCH TLPAREN TIDENT TRPAREN TLBRACE caseitems TRBRACE
  111              | TKW_SWITCH TLPAREN TIDENT TRPAREN TLBRACE caseitems TKW_ELSE TLBRACE kernelstatements TRBRACE TRBRACE

  112 optionalstring: /* empty */
  113               | TSTRING

  114 controlstmt: kernelcall
  115            | samplestmt
  116            | TKW_PAR optionalstring TLBRACE kernelstatements TRBRACE
  117            | TKW_SEQ optionalstring TLBRACE kernelstatements TRBRACE
  118            | TKW_ITERATE optionalident quantity optionalstring TLBRACE kernelstatements TRBRACE
  119            | TKW_MAP optionalident quantity optionalstring TLBRACE kernelstatements TRBRACE
  120            | ifthencontrol
  121            | probabilitycontrol
  122            | switchcontrol

  123 tofrom: /* empty */
  124       | TKW_TO TIDENT
  125       | TKW_FROM TIDENT

  126 optionaltraitlist: /* empty */
  127                  | TKW_AS traitlist

  128 traitlist: trait
  129          | traitlist TCOMMA trait

  130 trait: TIDENT
  131      | TIDENT TLPAREN expr TRPAREN
  132      | TIDENT TLPAREN arguments TRPAREN

  133 argdecllist: argdecl
  134            | argdecllist TCOMMA argdecl

  135 argdecl: TKW_DATA ident
  136        | TKW_PARAM ident

  137 quantity: TLBRACKET expr TRBRACKET

  138 expr: value
  139     | constant
  140     | ident
  141     | TIDENT TLBRACKET expr TRBRACKET
  142     | TIDENT TLBRACKET expr TRBRACKET TLBRACKET expr TRBRACKET
  143     | TLPAREN expr TRPAREN
  144     | expr TPLUS expr
  145     | expr TMINUS expr
  146     | expr TMUL expr
  147     | expr TDIV expr
  148     | expr TEXP expr
  149     | TMINUS expr
  150     | functioncall

  151 functioncall: TIDENT TLPAREN arguments TRPAREN

  152 arguments: /* empty */
  153          | expr
  154          | arguments TCOMMA expr

  155 namedarguments: TIDENT TEQUAL expr
  156               | namedarguments TCOMMA TIDENT TEQUAL expr


Terminals, with rules where they appear

$end (0) 0
error (256)
TKW_PARAM (258) 73 74 75 76 77 78 136
TKW_ENUM (259) 79
TKW_IN (260) 74 75
TKW_WITH (261) 24 92
TKW_OF (262) 72
TKW_SIZE (263) 72
TKW_MODEL (264) 32 33 34 40
TKW_KERNEL (265) 35 43 44 45 46
TKW_DATA (266) 36 89 90 135
TKW_SAMPLE (267) 88
TKW_IMPORT (268) 91 92
TKW_AS (269) 89 127
TKW_TO (270) 39 124
TKW_FROM (271) 88 91 92 125
TKW_CALL (272) 93 94
TKW_ITERATE (273) 118
TKW_MAP (274) 39 119
TKW_PAR (275) 116
TKW_SEQ (276) 117
TKW_EXECUTE (277) 68 69
TKW_IF (278) 103 104 105
TKW_ELSE (279) 104 105 109 111
TKW_PROBABILITY (280) 108 109
TKW_SWITCH (281) 110 111
TKW_RESOURCE (282) 24 25
TKW_CONFLICT (283) 23
TKW_POWER (284) 30 31
TKW_STATIC (285) 30
TKW_DYNAMIC (286) 31
TKW_PROPERTY (287) 20 21
TKW_CONNECT (288) 22
TIDENT (289) 9 18 19 20 21 23 24 25 26 27 28 29 32 33 34 40 47 48 71
    72 75 77 79 86 87 89 90 91 92 110 111 124 125 130 131 132 141 142
    151 155 156
TSTRING (290) 91 92 113
TINT (291) 49 82 84
TREAL (292) 50 83 85
TKW_10POWER (293) 53
TDOTDOT (294) 74
TEQUAL (295) 73 74 75 76 77 78 155 156
TLPAREN (296) 24 25 27 29 45 46 77 94 103 104 105 110 111 131 132 143
    151
TRPAREN (297) 24 25 27 29 45 46 77 94 103 104 105 110 111 131 132 143
    151
TLBRACE (298) 9 22 32 33 34 35 36 40 43 44 45 46 68 69 76 78 79 80
    81 103 104 105 106 107 108 109 110 111 116 117 118 119
TRBRACE (299) 9 22 32 33 34 35 36 40 43 44 45 46 68 69 76 78 79 80
    81 103 104 105 106 107 108 109 110 111 116 117 118 119
TLBRACKET (300) 76 77 78 137 141 142
TRBRACKET (301) 76 77 78 137 141 142
TCOMMA (302) 23 28 29 81 84 85 87 129 134 154 156
TDOT (303) 48
TPLUS (304) 144
TMINUS (305) 145 149
TMUL (306) 146
TDIV (307) 147
TEXP (308) 148
TCOMPEQ (309) 97
TCOMPNE (310) 98
TCOMPLT (311) 99
TCOMPGT (312) 100
TCOMPLE (313) 101
TCOMPGE (314) 102
TAND (315) 95
TOR (316) 96
NEG (317)


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
begin (64)
    on left: 1 2 3, on right: 0
mach (65)
    on left: 4, on right: 1
machcontent (66)
    on left: 5 6 7 8, on right: 4 7 8
component (67)
    on left: 9, on right: 6 8
componentstatements (68)
    on left: 10 11, on right: 9 11
componentstmt (69)
    on left: 12 13 14 15 16 17, on right: 10 11
subcomponent (70)
    on left: 18 19, on right: 17
property (71)
    on left: 20 21, on right: 12
connect (72)
    on left: 22, on right: 13
conflict (73)
    on left: 23, on right: 16
resource (74)
    on left: 24 25, on right: 14
traitdefinitions (75)
    on left: 26 27 28 29, on right: 24 28 29
power (76)
    on left: 30 31, on right: 15
map (77)
    on left: 32 33 34, on right: 3
mapkernel (78)
    on left: 35, on right: 32 34
mapdata (79)
    on left: 36, on right: 32 33
mapstmts (80)
    on left: 37 38, on right: 35 36 38
mapstmt (81)
    on left: 39, on right: 37 38
app (82)
    on left: 40, on right: 2
kernels (83)
    on left: 41 42, on right: 40 42
kernel (84)
    on left: 43 44 45 46, on right: 41 42
ident (85)
    on left: 47 48, on right: 39 43 44 45 46 48 52 73 74 75 76 77 78
    88 93 94 135 136 140
value (86)
    on left: 49 50, on right: 138
optionalident (87)
    on left: 51 52, on right: 118 119
constant (88)
    on left: 53, on right: 139
globalstatements (89)
    on left: 54 55, on right: 32 33 34 40 55
localstatements (90)
    on left: 56 57, on right: 44 46 57
kernelstatements (91)
    on left: 58 59, on right: 43 44 45 46 59 103 104 105 106 107 109
    111 116 117 118 119
execstatements (92)
    on left: 60 61, on right: 61 68 69
globalstmt (93)
    on left: 62 63 64, on right: 5 7 54 55
localstmt (94)
    on left: 65 66 67, on right: 56 57
kernelstmt (95)
    on left: 68 69 70, on right: 58 59
execstmt (96)
    on left: 71 72, on right: 60 61
paramstmt (97)
    on left: 73 74 75 76 77 78 79, on right: 63 66
arraylist (98)
    on left: 80 81, on right: 78 81
valuelist (99)
    on left: 82 83 84 85, on right: 76 80 81 84 85
identlist (100)
    on left: 86 87, on right: 22 79 87
samplestmt (101)
    on left: 88, on right: 115
datastmt (102)
    on left: 89 90, on right: 64 67
importstmt (103)
    on left: 91 92, on right: 62 65
kernelcall (104)
    on left: 93 94, on right: 114
comparison (105)
    on left: 95 96 97 98 99 100 101 102, on right: 95 96 103 104 105
ifthencontrol (106)
    on left: 103 104 105, on right: 105 120
caseitems (107)
    on left: 106 107, on right: 107 108 109 110 111
probabilitycontrol (108)
    on left: 108 109, on right: 121
switchcontrol (109)
    on left: 110 111, on right: 122
optionalstring (110)
    on left: 112 113, on right: 68 69 116 117 118 119
controlstmt (111)
    on left: 114 115 116 117 118 119 120 121 122, on right: 70
tofrom (112)
    on left: 123 124 125, on right: 71 72
optionaltraitlist (113)
    on left: 126 127, on right: 71 72
traitlist (114)
    on left: 128 129, on right: 127 129
trait (115)
    on left: 130 131 132, on right: 128 129
argdecllist (116)
    on left: 133 134, on right: 45 46 134
argdecl (117)
    on left: 135 136, on right: 133 134
quantity (118)
    on left: 137, on right: 19 20 24 25 26 27 28 29 30 31 69 71 72
    90 106 107 118 119
expr (119)
    on left: 138 139 140 141 142 143 144 145 146 147 148 149 150, on right:
    73 74 75 97 98 99 100 101 102 131 137 141 142 143 144 145 146 147
    148 149 153 154 155 156
functioncall (120)
    on left: 151, on right: 88 89 150
arguments (121)
    on left: 152 153 154, on right: 77 94 132 151 154
namedarguments (122)
    on left: 155 156, on right: 92 156


State 0

    0 $accept: . begin $end
    1 begin: . mach
    2      | . app
    3      | . map
    4 mach: . machcontent
    5 machcontent: . globalstmt
    6            | . component
    7            | . machcontent globalstmt
    8            | . machcontent component
    9 component: . TIDENT TIDENT TLBRACE componentstatements TRBRACE
   32 map: . TKW_MODEL TIDENT TLBRACE globalstatements mapdata mapkernel TRBRACE
   33    | . TKW_MODEL TIDENT TLBRACE globalstatements mapdata TRBRACE
   34    | . TKW_MODEL TIDENT TLBRACE globalstatements mapkernel TRBRACE
   40 app: . TKW_MODEL TIDENT TLBRACE globalstatements kernels TRBRACE
   62 globalstmt: . importstmt
   63           | . paramstmt
   64           | . datastmt
   73 paramstmt: . TKW_PARAM ident TEQUAL expr
   74          | . TKW_PARAM ident TEQUAL expr TKW_IN expr TDOTDOT expr
   75          | . TKW_PARAM ident TEQUAL expr TKW_IN TIDENT
   76          | . TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TLBRACE valuelist TRBRACE
   77          | . TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   78          | . TKW_PARAM ident TLBRACKET TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE
   79          | . TKW_ENUM TIDENT TLBRACE identlist TRBRACE
   89 datastmt: . TKW_DATA TIDENT TKW_AS functioncall
   90         | . TKW_DATA TIDENT quantity
   91 importstmt: . TKW_IMPORT TIDENT TKW_FROM TSTRING
   92           | . TKW_IMPORT TIDENT TKW_FROM TSTRING TKW_WITH namedarguments

    TKW_PARAM   shift, and go to state 1
    TKW_ENUM    shift, and go to state 2
    TKW_MODEL   shift, and go to state 3
    TKW_DATA    shift, and go to state 4
    TKW_IMPORT  shift, and go to state 5
    TIDENT      shift, and go to state 6

    begin        go to state 7
    mach         go to state 8
    machcontent  go to state 9
    component    go to state 10
    map          go to state 11
    app          go to state 12
    globalstmt   go to state 13
    paramstmt    go to state 14
    datastmt     go to state 15
    importstmt   go to state 16


State 1

   47 ident: . TIDENT
   48      | . TIDENT TDOT ident
   73 paramstmt: TKW_PARAM . ident TEQUAL expr
   74          | TKW_PARAM . ident TEQUAL expr TKW_IN expr TDOTDOT expr
   75          | TKW_PARAM . ident TEQUAL expr TKW_IN TIDENT
   76          | TKW_PARAM . ident TLBRACKET TRBRACKET TEQUAL TLBRACE valuelist TRBRACE
   77          | TKW_PARAM . ident TLBRACKET TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   78          | TKW_PARAM . ident TLBRACKET TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE

    TIDENT  shift, and go to state 17

    ident  go to state 18


State 2

   79 paramstmt: TKW_ENUM . TIDENT TLBRACE identlist TRBRACE

    TIDENT  shift, and go to state 19


State 3

   32 map: TKW_MODEL . TIDENT TLBRACE globalstatements mapdata mapkernel TRBRACE
   33    | TKW_MODEL . TIDENT TLBRACE globalstatements mapdata TRBRACE
   34    | TKW_MODEL . TIDENT TLBRACE globalstatements mapkernel TRBRACE
   40 app: TKW_MODEL . TIDENT TLBRACE globalstatements kernels TRBRACE

    TIDENT  shift, and go to state 20


State 4

   89 datastmt: TKW_DATA . TIDENT TKW_AS functioncall
   90         | TKW_DATA . TIDENT quantity

    TIDENT  shift, and go to state 21


State 5

   91 importstmt: TKW_IMPORT . TIDENT TKW_FROM TSTRING
   92           | TKW_IMPORT . TIDENT TKW_FROM TSTRING TKW_WITH namedarguments

    TIDENT  shift, and go to state 22


State 6

    9 component: TIDENT . TIDENT TLBRACE componentstatements TRBRACE

    TIDENT  shift, and go to state 23


State 7

    0 $accept: begin . $end

    $end  shift, and go to state 24


State 8

    1 begin: mach .

    $default  reduce using rule 1 (begin)


State 9

    4 mach: machcontent .  [$end]
    7 machcontent: machcontent . globalstmt
    8            | machcontent . component
    9 component: . TIDENT TIDENT TLBRACE componentstatements TRBRACE
   62 globalstmt: . importstmt
   63           | . paramstmt
   64           | . datastmt
   73 paramstmt: . TKW_PARAM ident TEQUAL expr
   74          | . TKW_PARAM ident TEQUAL expr TKW_IN expr TDOTDOT expr
   75          | . TKW_PARAM ident TEQUAL expr TKW_IN TIDENT
   76          | . TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TLBRACE valuelist TRBRACE
   77          | . TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   78          | . TKW_PARAM ident TLBRACKET TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE
   79          | . TKW_ENUM TIDENT TLBRACE identlist TRBRACE
   89 datastmt: . TKW_DATA TIDENT TKW_AS functioncall
   90         | . TKW_DATA TIDENT quantity
   91 importstmt: . TKW_IMPORT TIDENT TKW_FROM TSTRING
   92           | . TKW_IMPORT TIDENT TKW_FROM TSTRING TKW_WITH namedarguments

    TKW_PARAM   shift, and go to state 1
    TKW_ENUM    shift, and go to state 2
    TKW_DATA    shift, and go to state 4
    TKW_IMPORT  shift, and go to state 5
    TIDENT      shift, and go to state 6

    $default  reduce using rule 4 (mach)

    component   go to state 25
    globalstmt  go to state 26
    paramstmt   go to state 14
    datastmt    go to state 15
    importstmt  go to state 16


State 10

    6 machcontent: component .

    $default  reduce using rule 6 (machcontent)


State 11

    3 begin: map .

    $default  reduce using rule 3 (begin)


State 12

    2 begin: app .

    $default  reduce using rule 2 (begin)


State 13

    5 machcontent: globalstmt .

    $default  reduce using rule 5 (machcontent)


State 14

   63 globalstmt: paramstmt .

    $default  reduce using rule 63 (globalstmt)


State 15

   64 globalstmt: datastmt .

    $default  reduce using rule 64 (globalstmt)


State 16

   62 globalstmt: importstmt .

    $default  reduce using rule 62 (globalstmt)


State 17

   47 ident: TIDENT .  [$end, TKW_PARAM, TKW_ENUM, TKW_IN, TKW_KERNEL, TKW_DATA, TKW_SAMPLE, TKW_IMPORT, TKW_TO, TKW_FROM, TKW_CALL, TKW_ITERATE, TKW_MAP, TKW_PAR, TKW_SEQ, TKW_EXECUTE, TKW_IF, TKW_PROBABILITY, TKW_SWITCH, TIDENT, TDOTDOT, TEQUAL, TLPAREN, TRPAREN, TLBRACE, TRBRACE, TLBRACKET, TRBRACKET, TCOMMA, TPLUS, TMINUS, TMUL, TDIV, TEXP, TCOMPEQ, TCOMPNE, TCOMPLT, TCOMPGT, TCOMPLE, TCOMPGE, TAND, TOR]
   48      | TIDENT . TDOT ident

    TDOT  shift, and go to state 27

    $default  reduce using rule 47 (ident)


State 18

   73 paramstmt: TKW_PARAM ident . TEQUAL expr
   74          | TKW_PARAM ident . TEQUAL expr TKW_IN expr TDOTDOT expr
   75          | TKW_PARAM ident . TEQUAL expr TKW_IN TIDENT
   76          | TKW_PARAM ident . TLBRACKET TRBRACKET TEQUAL TLBRACE valuelist TRBRACE
   77          | TKW_PARAM ident . TLBRACKET TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   78          | TKW_PARAM ident . TLBRACKET TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE

    TEQUAL     shift, and go to state 28
    TLBRACKET  shift, and go to state 29


State 19

   79 paramstmt: TKW_ENUM TIDENT . TLBRACE identlist TRBRACE

    TLBRACE  shift, and go to state 30


State 20

   32 map: TKW_MODEL TIDENT . TLBRACE globalstatements mapdata mapkernel TRBRACE
   33    | TKW_MODEL TIDENT . TLBRACE globalstatements mapdata TRBRACE
   34    | TKW_MODEL TIDENT . TLBRACE globalstatements mapkernel TRBRACE
   40 app: TKW_MODEL TIDENT . TLBRACE globalstatements kernels TRBRACE

    TLBRACE  shift, and go to state 31


State 21

   89 datastmt: TKW_DATA TIDENT . TKW_AS functioncall
   90         | TKW_DATA TIDENT . quantity
  137 quantity: . TLBRACKET expr TRBRACKET

    TKW_AS     shift, and go to state 32
    TLBRACKET  shift, and go to state 33

    quantity  go to state 34


State 22

   91 importstmt: TKW_IMPORT TIDENT . TKW_FROM TSTRING
   92           | TKW_IMPORT TIDENT . TKW_FROM TSTRING TKW_WITH namedarguments

    TKW_FROM  shift, and go to state 35


State 23

    9 component: TIDENT TIDENT . TLBRACE componentstatements TRBRACE

    TLBRACE  shift, and go to state 36


State 24

    0 $accept: begin $end .

    $default  accept


State 25

    8 machcontent: machcontent component .

    $default  reduce using rule 8 (machcontent)


State 26

    7 machcontent: machcontent globalstmt .

    $default  reduce using rule 7 (machcontent)


State 27

   47 ident: . TIDENT
   48      | . TIDENT TDOT ident
   48      | TIDENT TDOT . ident

    TIDENT  shift, and go to state 17

    ident  go to state 37


State 28

   47 ident: . TIDENT
   48      | . TIDENT TDOT ident
   49 value: . TINT
   50      | . TREAL
   53 constant: . TKW_10POWER
   73 paramstmt: TKW_PARAM ident TEQUAL . expr
   74          | TKW_PARAM ident TEQUAL . expr TKW_IN expr TDOTDOT expr
   75          | TKW_PARAM ident TEQUAL . expr TKW_IN TIDENT
  138 expr: . value
  139     | . constant
  140     | . ident
  141     | . TIDENT TLBRACKET expr TRBRACKET
  142     | . TIDENT TLBRACKET expr TRBRACKET TLBRACKET expr TRBRACKET
  143     | . TLPAREN expr TRPAREN
  144     | . expr TPLUS expr
  145     | . expr TMINUS expr
  146     | . expr TMUL expr
  147     | . expr TDIV expr
  148     | . expr TEXP expr
  149     | . TMINUS expr
  150     | . functioncall
  151 functioncall: . TIDENT TLPAREN arguments TRPAREN

    TIDENT       shift, and go to state 38
    TINT         shift, and go to state 39
    TREAL        shift, and go to state 40
    TKW_10POWER  shift, and go to state 41
    TLPAREN      shift, and go to state 42
    TMINUS       shift, and go to state 43

    ident         go to state 44
    value         go to state 45
    constant      go to state 46
    expr          go to state 47
    functioncall  go to state 48


State 29

   76 paramstmt: TKW_PARAM ident TLBRACKET . TRBRACKET TEQUAL TLBRACE valuelist TRBRACE
   77          | TKW_PARAM ident TLBRACKET . TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   78          | TKW_PARAM ident TLBRACKET . TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE

    TRBRACKET  shift, and go to state 49


State 30

   79 paramstmt: TKW_ENUM TIDENT TLBRACE . identlist TRBRACE
   86 identlist: . TIDENT
   87          | . identlist TCOMMA TIDENT

    TIDENT  shift, and go to state 50

    identlist  go to state 51


State 31

   32 map: TKW_MODEL TIDENT TLBRACE . globalstatements mapdata mapkernel TRBRACE
   33    | TKW_MODEL TIDENT TLBRACE . globalstatements mapdata TRBRACE
   34    | TKW_MODEL TIDENT TLBRACE . globalstatements mapkernel TRBRACE
   40 app: TKW_MODEL TIDENT TLBRACE . globalstatements kernels TRBRACE
   54 globalstatements: . globalstmt
   55                 | . globalstatements globalstmt
   62 globalstmt: . importstmt
   63           | . paramstmt
   64           | . datastmt
   73 paramstmt: . TKW_PARAM ident TEQUAL expr
   74          | . TKW_PARAM ident TEQUAL expr TKW_IN expr TDOTDOT expr
   75          | . TKW_PARAM ident TEQUAL expr TKW_IN TIDENT
   76          | . TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TLBRACE valuelist TRBRACE
   77          | . TKW_PARAM ident TLBRACKET TRBRACKET TEQUAL TIDENT TLPAREN arguments TRPAREN
   78          | . TKW_PARAM ident TLBRACKET TRBRACKET TLBRACKET TRBRACKET TEQUAL TLBRACE arraylist TRBRACE
   79          | . TKW_ENUM TIDENT TLBRACE identlist TRBRACE
   89 datastmt: . TKW_DATA TIDENT TKW_AS functioncall
   90         | . TKW_DATA TIDENT quantity
   91 importstmt: . TKW_IMPORT TIDENT TKW_FROM TSTRING
   92           | . TKW_IMPORT TIDENT TKW_FROM TSTRING TKW_WITH namedarguments

    TKW_PARAM   shift, and go to state 1
    TKW_ENUM    shift, and go to state 2
    TKW_DATA    shift, and go to state 4
    TKW_IMPORT  shift, and go to state 5

    globalstatements  go to state 52
    globalstmt        go to state 53
    paramstmt         go to state 14
    datastmt          go to state 15
    importstmt        go to state 16


State 32

   89 datastmt: TKW_DATA TIDENT TKW_AS . functioncall
  151 functioncall: . TIDENT TLPAREN arguments TRPAREN

    TIDENT  shift, and go to state 54

    functioncall  go to state 55


State 33

   47 ident: . TIDENT
   48      | . TIDENT TDOT ident
   49 value: . TINT
   50      | . TREAL
   53 constant: . TKW_10POWER
  137 quantity: TLBRACKET . expr TRBRACKET
  138 expr: . value
  139     | . constant
  140     | . ident
  141     | . TIDENT TLBRACKET expr TRBRACKET
  142     | . TIDENT TLBRACKET expr TRBRACKET TLBRACKET expr TRBRACKET
  143     | . TLPAREN expr TRPAREN
  144     | . expr TPLUS expr
  145     | . expr TMINUS expr
  146     | . expr TMUL expr
  147     | . expr TDIV expr
  148     | . expr TEXP expr
  149     | . TMINUS expr
  150     | . functioncall
  151 functioncall: . TIDENT TLPAREN arguments TRPAREN

    TIDENT       shift, and go to state 38
    TINT         shift, and go to state 39
    TREAL        shift, and go to state 40
    TKW_10POWER  shift, and go to state 41
    TLPAREN      shift, and go to state 42
    TMINUS       shift, and go to state 43

    ident         go to state 44
    value         go to state 45
    constant      go to state 46
    expr          go to state 56
    functioncall  go to state 48


State 34

   90 datastmt: TKW_DATA TIDENT quantity .

    $default  reduce using rule 90 (datastmt)


State 35

   91 importstmt: TKW_IMPORT TIDENT TKW_FROM . TSTRING
   92           | TKW_IMPORT TIDENT TKW_FROM . TSTRING TKW_WITH namedarguments

    TSTRING  shift, and go to state 57


State 36

    9 component: TIDENT TIDENT TLBRACE . componentstatements TRBRACE
   10 componentstatements: . componentstmt
   11                    | . componentstatements componentstmt
   12 componentstmt: . property
   13              | . connect
   14              | . resource
   15              | . power
   16              | . conflict
   17              | . subcomponent
   18 subcomponent: . TIDENT TIDENT
   19             | . TIDENT quantity TIDENT
   20 property: . TKW_PROPERTY TIDENT quantity
   21         | . TKW_PROPERTY TIDENT
   22 connect: . TKW_CONNECT TLBRACE identlist TRBRACE
   23 conflict: . TKW_CONFLICT TIDENT TCOMMA TIDENT
   24 resource: . TKW_RESOURCE TIDENT TLPAREN TIDENT TRPAREN quantity TKW_WITH traitdefinitions
   25         | . TKW_RESOURCE TIDENT TLPAREN TIDENT TRPAREN quantity
   30 power: . TKW_STATIC TKW_POWER quantity
   31      | . TKW_DYNAMIC TKW_POWER quantity

    TKW_RESOURCE  shift, and go to state 58
    TKW_CONFLICT  shift, and go to state 59
    TKW_STATIC    shift, and go to state 60
    TKW_DYNAMIC   shift, and go to state 61
    TKW_PROPERTY  shift, and go to state 62
    TKW_CONNECT   shift, and go to state 63
    TIDENT        shift, and go to state 64

    componentstatements  go to state 65
    componentstmt        go to state 66
    subcomponent         go to state 67
    property             go to state 68
    connect              go to state 69
    conflict             go to state 70
    resource             go to state 71
    power                go to state 72


State 37

   48 ident: TIDENT TDOT ident .

    $default  reduce using rule 48 (ident)


State 38

   47 ident: TIDENT .  [$end, TKW_PARAM, TKW_ENUM, TKW_IN, TKW_KERNEL, TKW_DATA, TKW_SAMPLE, TKW_IMPORT, TKW_CALL, TKW_ITERATE, TKW_MAP, TKW_PAR, TKW_SEQ, TKW_EXECUTE, TKW_IF, TKW_PROBABILITY, TKW_SWITCH, TIDENT, TDOTDOT, TRPAREN, TRBRACKET, TCOMMA, TPLUS, TMINUS, TMUL, TDIV, TEXP, TCOMPEQ, TCOMPNE, TCOMPLT, TCOMPGT, TCOMPLE, TCOMPGE, TAND, TOR]
   48      | TIDENT . TDOT ident
  141 expr: TIDENT . TLBRACKET expr TRBRACKET
  142     | TIDENT . TLBRACKET expr TRBRACKET TLBRACKET expr TRBRACKET
  151 functioncall: TIDENT . TLPAREN arguments TRPAREN

    TLPAREN    shift, and go to state 73
    TLBRACKET  shift, and go to state 74
    TDOT       shift, and go to state 27

    $default  reduce using rule 47 (ident)


State 39

   49 value: TINT .

    $default  reduce using rule 49 (value)


State 40

   50 value: TREAL .

    $default  reduce using rule 50 (value)


State 41

   53 constant: TKW_10POWER .

    $default  reduce using rule 53 (constant)


State 42

   47 ident: . TIDENT
   48      | . TIDENT TDOT ident
   49 value: . TINT
   50      | . TREAL
   53 constant: . TKW_10POWER
  138 expr: . value
  139     | . constant
  140     | . ident
  141     | . TIDENT TLBRACKET expr TRBRACKET
  142     | . TIDENT TLBRACKET expr TRBRACKET TLBRACKET expr TRBRACKET
  143     | . TLPAREN expr TRPAREN
  143     | TLPAREN . expr TRPAREN
  144     | . expr TPLUS expr
  145     | . expr TMINUS expr
  146     | . expr TMUL expr
  147     | . expr TDIV expr
  148     | . expr TEXP expr
  149     | . TMINUS expr
  150     | . functioncall
  151 functioncall: . TIDENT TLPAREN arguments TRPAREN
